--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-certifi==2020.4.5.1
-chardet==3.0.4
-dnspython==1.16.0
-fake-useragent==0.1.11
-future==0.18.2
-idna==2.9
-ipwhois==1.1.0
+redis==3.5.2
+python_whois==0.7.2
+fake_useragent==0.1.11
 lxml==4.5.0
-netaddr==0.7.19
-python-whois==0.7.2
-requests==2.23.0
-urllib3==1.25.8
-pymysql==0.9.3
 paramiko==2.7.1
+requests==2.23.0
+netaddr==0.7.19
+ipwhois==1.1.0
+PyMySQL==0.9.3
+dnspython==1.16.0
+whois==0.9.7
